# asteroids

./: .gitignore  .pre-commit-config.yaml  README.md  asteroid.py  asteroid_field.py  circle.py  constants.py  game_loop.py  main.py  player.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: unit-tests.yml
app/: core.py  game_loop.py  settings.py
app/objects/: __init__.py  asteroid.py  asteroid_field.py  base.py  circle.py  missile.py  player.py  scenes.py  score_panel.py  ui.py
app/settings/: constants.py
app/ui/: __init__.py  base.py  game_over.py  score.py  score_panel.py
app/utils/: __init__.py  constants.py  logger.py
core/: __init__.py  clock.py  constants.py  settings.py
objects/: __init__.py  asteroid.py  asteroid_field.py  base.py  circle.py  missile.py  player.py
scenes/: __init__.py  base.py  game.py
tests/: conftest.py  test_asteroid.py  test_asteroid_field.py  test_collision_handler.py  test_input_handler.py  test_missile.py  test_player.py  test_score_handler.py  test_settings.py
utils/: __init__.py  collision_handler.py  constants.py  input_handler.py  score_handler.py
