[project]
name = "asteroids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.12.0",
    "pygame>=2.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.14.0",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "RUF022"]

[tool.pytest]
addopts = ["-v", "--cov=.", "--cov-report=term", "--cov-report=html:.coverage_html"]
testpaths = ["tests"]
pythonpath = ["."]
